[package]
name = "polydriver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polydriver"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
polygondb = "1.16.0"
serde_json = "1.0.107"
json_value_remove = "1.0.2"
jsonptr = "0.4.4"
serde = "1.0.189"
mimalloc-rust = "0.2.1"
